@@ -41,5 +41,4 @@
     "type": "git",
     "url": "https://github.com/kauemurakami/go-snippets.git"
   }
-  
 }
